--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -42,6 +42,14 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
       redis:
           image: redis:3
+      datapusher:
+        image: ghcr.io/keitaroinc/datapusher:0.0.17
+        env:
+          DATAPUSHER_MAX_CONTENT_LENGTH: 10485760
+          DATAPUSHER_CHUNK_SIZE: 16384
+          DATAPUSHER_CHUNK_INSERT_ROWS: 250
+          DATAPUSHER_DOWNLOAD_TIMEOUT: 30
+          DATAPUSHER_SSL_VERIFY: False
 
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
