--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -14,73 +14,22 @@ jobs:
         config:
         - { os: ubuntu-latest,  r: 'release'}
 
-    services:
-      ckan:
-        image: openknowledge/ckan-dev:2.8
-        env:
-          CKAN_SQLALCHEMY_URL: postgresql://ckan_default:pass@postgres/ckan_test
-          CKAN_DATASTORE_WRITE_URL: postgresql://datastore_write:pass@postgres/datastore_test
-          CKAN_DATASTORE_READ_URL: postgresql://datastore_read:pass@postgres/datastore_test
-          CKAN_SOLR_URL: http://solr:8983/solr/ckan
-          CKAN_REDIS_URL: redis://redis:6379/1
-          CKAN_DATAPUSHER_URL: http://datapusher:8800
-          CKAN__DATAPUSHER__CALLBACK_URL_BASE: http://ckan:5000
-          TZ: UTC
-          CKAN_SYSADMIN_NAME: ckan_admin
-          CKAN_SYSADMIN_PASSWORD: test1234
-          CKAN_SYSADMIN_EMAIL: mail@example.com
-        ports:
-          - "5000:5000"
-      solr:
-        image: ckan/ckan-solr:2.8
-      postgres:
-        image: ckan/ckan-postgres-dev:2.8
-        env:
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: postgres
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-      redis:
-          image: redis:3
-      datapusher:
-        image: ghcr.io/keitaroinc/datapusher:0.0.17
-        env:
-          DATAPUSHER_MAX_CONTENT_LENGTH: 10485760
-          DATAPUSHER_CHUNK_SIZE: 16384
-          DATAPUSHER_CHUNK_INSERT_ROWS: 250
-          DATAPUSHER_DOWNLOAD_TIMEOUT: 30
-          DATAPUSHER_SSL_VERIFY: False
-
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
-      R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
-      CRAN: ${{ matrix.config.rspm }}
-      CKANR_DEFAULT_KEY: ${{secrets.CKANR_DEFAULT_KEY}}
-      CKANR_DEFAULT_URL: ${{secrets.CKANR_DEFAULT_URL}}
-      CKANR_TEST_BEHAVIOUR: ${{secrets.CKANR_TEST_BEHAVIOUR}}
-      CKANR_TEST_DID: ${{secrets.CKANR_TEST_DID}}
-      CKANR_TEST_GID: ${{secrets.CKANR_TEST_GID}}
-      CKANR_TEST_KEY: ${{secrets.CKANR_TEST_KEY}}
-      CKANR_TEST_OID: ${{secrets.CKANR_TEST_OID}}
-      CKANR_TEST_RID: ${{secrets.CKANR_TEST_RID}}
-      CKANR_TEST_URL: ${{secrets.CKANR_TEST_URL}}
-      TEST_API_KEY: ${{secrets.TEST_API_KEY}}
-      R_KEEP_PKG_SOURCE: yes
-
     steps:
       - uses: actions/checkout@v3
+      - name: Start containers
+        run: docker compose -f docker-compose.yml" up -d --build
       - name: LOG BEFORE CKAN CHECK...
-        run: docker logs "${{ job.services.ckan.id }}"
+        run: docker logs docker-ckan-1
       - name: Check if CKAN is up
         run: |
           curl --retry 5 --retry-delay 1  http://localhost:5000/api/3/action/status_show
       - name: Generate CKAN API token
         run: |
-          echo "TEST_API_KEY=$(docker exec "${{ job.services.ckan.id }}" ckan user token add ckan_admin dev_token | sed 's/API Token created://' | tr -d '\n\t')" >> $GITHUB_ENV
+          echo "TEST_API_KEY=$(docker exec docker-ckan-1 ckan user token add ckan_admin dev_token | sed 's/API Token created://' | tr -d '\n\t')" >> $GITHUB_ENV
         if: matrix.ckan-version == '2.9'
       - name: Generate CKAN API key
         run: |
-          echo "TEST_API_KEY"=$(docker exec "${{ job.services.ckan.id }}" paster --plugin=ckan user ckan_admin | grep -o -P '(?<=apikey=).*(?= created)') >> $GITHUB_ENV
+          echo "TEST_API_KEY"=$(docker exec docker-ckan-1 paster --plugin=ckan user ckan_admin | grep -o -P '(?<=apikey=).*(?= created)') >> $GITHUB_ENV
         if: matrix.ckan-version != '2.9'
       - name: Get value of TEST_API_KEY
         run: |
@@ -107,9 +56,6 @@ jobs:
         run: rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "error", check_dir = "check")
         shell: Rscript {0}
 
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
-
       - name: Test coverage
         if: matrix.config.os == 'macOS-latest' && matrix.config.r == 'release'
         run: |
@@ -135,4 +81,4 @@ jobs:
           path: ${{ runner.temp }}/package
 
       - name: LOG AFTER CKAN CHECK...
-        run: docker logs "${{ job.services.ckan.id }}"
+        run: docker logs docker-ckan-1
