--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Start containers
-        run: docker compose -f docker-compose.yml" up -d --build
+        run: docker compose -f docker-compose.yml up -d --build
       - name: LOG BEFORE CKAN CHECK...
         run: docker logs docker-ckan-1
       - name: Check if CKAN is up
