--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -17,7 +17,22 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Start containers
-        run: docker compose -f docker-compose.yml up -d --build
+        run: docker compose -f docker-compose.yml up -d
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          r-version: ${{ matrix.config.r }}
+          use-public-rspm: true
+
+      - uses: r-lib/actions/setup-pandoc@v2
+
+      - uses: r-lib/actions/setup-r-dependencies@v2
+        with:
+          extra-packages: |
+            any::rcmdcheck
+            any::covr
+          needs: |
+            check
+            coverage
       - name: LOG BEFORE CKAN CHECK...
         run: docker logs ckanr-ckan-1
       - name: Check if CKAN is up
@@ -34,22 +49,6 @@ jobs:
       - name: Get value of TEST_API_KEY
         run: |
           curl -H "Authorization: ${{ env.TEST_API_KEY }}" http://localhost:5000/api/3/action/user_show?id=ckan_admin
-      - uses: r-lib/actions/setup-r@v2
-        with:
-          r-version: ${{ matrix.config.r }}
-          use-public-rspm: true
-
-      - uses: r-lib/actions/setup-pandoc@v2
-
-      - uses: r-lib/actions/setup-r-dependencies@v2
-        with:
-          extra-packages: |
-            any::rcmdcheck
-            any::covr
-          needs: |
-            check
-            coverage
-
       - name: Check
         env:
           _R_CHECK_CRAN_INCOMING_: false
