--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -13,11 +13,12 @@ jobs:
       matrix:
         config:
         - { os: ubuntu-latest,  r: 'release'}
+        - ckan-version: [2.9, 2.8, 2.7]
 
     steps:
       - uses: actions/checkout@v3
       - name: Start containers
-        run: docker compose -f docker-compose.yml up -d
+        run: docker compose -f docker/${{ matrix.ckan-version }}/docker-compose.yml up -d
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
@@ -34,17 +35,17 @@ jobs:
             check
             coverage
       - name: LOG BEFORE CKAN CHECK...
-        run: docker logs ckanr-ckan-1
+        run: docker logs ckan
       - name: Check if CKAN is up
         run: |
           curl --retry 5 --retry-delay 1  http://localhost:5000/api/3/action/status_show
       - name: Generate CKAN API token
         run: |
-          echo "TEST_API_KEY=$(docker exec ckanr-ckan-1 ckan user token add ckan_admin dev_token | sed 's/API Token created://' | tr -d '\n\t')" >> $GITHUB_ENV
+          echo "TEST_API_KEY=$(docker exec ckan ckan user token add ckan_admin dev_token | sed 's/API Token created://' | tr -d '\n\t')" >> $GITHUB_ENV
         if: matrix.ckan-version == '2.9'
       - name: Generate CKAN API key
         run: |
-          echo "TEST_API_KEY"=$(docker exec ckanr-ckan-1 paster --plugin=ckan user ckan_admin | grep -o -P '(?<=apikey=).*(?= created)') >> $GITHUB_ENV
+          echo "TEST_API_KEY"=$(docker exec ckan paster --plugin=ckan user ckan_admin | grep -o -P '(?<=apikey=).*(?= created)') >> $GITHUB_ENV
         if: matrix.ckan-version != '2.9'
       - name: Get value of TEST_API_KEY
         run: |
@@ -80,4 +81,4 @@ jobs:
           path: ${{ runner.temp }}/package
 
       - name: LOG AFTER CKAN CHECK...
-        run: docker logs ckanr-ckan-1
+        run: docker logs ckan
