--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -17,6 +17,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: Add hosts to /etc/hosts
+        run: |
+            sudo echo "127.0.0.1 ckan" | sudo tee -a /etc/hosts
       - name: Start containers
         run: docker compose -f docker/${{ matrix.ckan-version }}/docker-compose.yml up -d
       - uses: r-lib/actions/setup-r@v2
