--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -52,7 +52,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Test coverage
-        if: matrix.config.os == 'macOS-latest' && matrix.config.r == 'release'
+        if: matrix.config.os == 'ubuntu-latest' && matrix.config.r == 'release'
         run: |
           covr::codecov(
             quiet = FALSE,
