--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -21,6 +21,7 @@ jobs:
       - name: Add hosts to /etc/hosts
         run: |
             sudo echo "127.0.0.1 ckan" | sudo tee -a /etc/hosts
+        if: matrix.config.os == 'ubuntu-latest'
       - name: Start containers
         run: docker compose -f docker/${{ matrix.ckan-version }}/docker-compose.yml up -d
       - uses: r-lib/actions/setup-r@v2
