--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -13,8 +13,10 @@ jobs:
       matrix:
         ckan-version: [2.9, 2.8, 2.7]
         config:
-        - { os: ubuntu-latest,  r: 'release'}
         - { os: windows-latest, r: 'release'}
+        - { os: macOS-latest, r: 'release'}
+        - { os: ubuntu-latest,  r: 'release'}
+        - { os: ubuntu-latest, r: 'devel'}
 
     steps:
       - uses: actions/checkout@v3
@@ -24,6 +26,7 @@ jobs:
         if: matrix.config.os == 'ubuntu-latest'
       - name: Start containers
         run: docker compose -f docker/${{ matrix.ckan-version }}/docker-compose.yml up -d
+        if: matrix.config.os == 'ubuntu-latest'
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
@@ -42,11 +45,11 @@ jobs:
       - name: Generate CKAN API token
         run: |
           echo "TEST_API_KEY=$(docker exec ckan ckan user token add ckan_admin dev_token | sed 's/API Token created://' | tr -d '\n\t')" >> $GITHUB_ENV
-        if: matrix.ckan-version == '2.9'
+        if: matrix.ckan-version == '2.9' and matrix.config.os == 'ubuntu-latest'
       - name: Generate CKAN API key
         run: |
           echo "TEST_API_KEY"=$(docker exec ckan paster --plugin=ckan user ckan_admin | grep -o -P '(?<=apikey=).*(?= created)') >> $GITHUB_ENV
-        if: matrix.ckan-version != '2.9'
+        if: matrix.ckan-version != '2.9' and matrix.config.os == 'ubuntu-latest'
       - name: Check
         env:
           _R_CHECK_CRAN_INCOMING_: false
@@ -71,7 +74,7 @@ jobs:
         shell: bash
 
       - name: Upload test results
-        if: failure()
+        if: failure() && matrix.config.os == 'ubuntu-latest'
         uses: actions/upload-artifact@v3
         with:
           name: coverage-test-failures
