--- a/.github/workflows/R-check.yaml
+++ b/.github/workflows/R-check.yaml
@@ -6,17 +6,18 @@ jobs:
   R-check:
     runs-on: ${{ matrix.config.os }}
 
-    name: ${{ matrix.config.os }} (${{ matrix.config.r }}) - CKAN ${{ matrix.ckan-version }}
+    name: ${{ matrix.config.os }} (${{ matrix.config.r }}) - CKAN ${{ matrix.config.ckan-version }}
 
     strategy:
       fail-fast: false
       matrix:
-        ckan-version: [2.9, 2.8, 2.7]
         config:
         - { os: windows-latest, r: 'release'}
         - { os: macOS-latest, r: 'release'}
-        - { os: ubuntu-latest,  r: 'release'}
-        - { os: ubuntu-latest, r: 'devel'}
+        - { os: ubuntu-latest,  r: 'release', ckan-version: 2.9}
+        - { os: ubuntu-latest,  r: 'release', ckan-version: 2.8}
+        - { os: ubuntu-latest,  r: 'release', ckan-version: 2.7}
+        - { os: ubuntu-latest, r: 'devel', ckan-version: 2.9}
 
     steps:
       - uses: actions/checkout@v3
@@ -25,7 +26,7 @@ jobs:
             sudo echo "127.0.0.1 ckan" | sudo tee -a /etc/hosts
         if: matrix.config.os == 'ubuntu-latest'
       - name: Start containers
-        run: docker compose -f docker/${{ matrix.ckan-version }}/docker-compose.yml up -d
+        run: docker compose -f docker/${{ matrix.config.ckan-version }}/docker-compose.yml up -d
         if: matrix.config.os == 'ubuntu-latest'
       - uses: r-lib/actions/setup-r@v2
         with:
@@ -45,11 +46,11 @@ jobs:
       - name: Generate CKAN API token
         run: |
           echo "TEST_API_KEY=$(docker exec ckan ckan user token add ckan_admin dev_token | sed 's/API Token created://' | tr -d '\n\t')" >> $GITHUB_ENV
-        if: matrix.ckan-version == '2.9' && matrix.config.os == 'ubuntu-latest'
+        if: matrix.config.ckan-version == '2.9' && matrix.config.os == 'ubuntu-latest'
       - name: Generate CKAN API key
         run: |
           echo "TEST_API_KEY"=$(docker exec ckan paster --plugin=ckan user ckan_admin | grep -o -P '(?<=apikey=).*(?= created)') >> $GITHUB_ENV
-        if: matrix.ckan-version != '2.9' && matrix.config.os == 'ubuntu-latest'
+        if: matrix.config.ckan-version != '2.9' && matrix.config.os == 'ubuntu-latest'
       - name: Check
         env:
           _R_CHECK_CRAN_INCOMING_: false
@@ -57,7 +58,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Test coverage
-        if: matrix.config.os == 'ubuntu-latest' && matrix.config.r == 'release' &&  matrix.ckan-version == '2.8'
+        if: matrix.config.os == 'ubuntu-latest' && matrix.config.r == 'release' &&  matrix.config.ckan-version == '2.8'
         run: |
           covr::codecov(
             quiet = FALSE,
